Fix link overflowing in contents

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -203,6 +203,7 @@ pre {
 }
 .content {
     color: var(--fg-content);
+    word-break: break-all;
 }
 .content blockquote {
     margin: 0;
